Typo error solved

--- a/src/WineQuality.ipynb
+++ b/src/WineQuality.ipynb
@@ -1211,7 +1211,7 @@
    "source": [
     "#Choosing between alcohol and density\n",
     "#Printing correlation\n",
-    "print(round(data[[\"alcohol\",\"quality\",]].corr(),2),end=\"\\n\\n\")ss\n",
+    "print(round(data[[\"alcohol\",\"quality\",]].corr(),2),end=\"\\n\\n\")\n",
     "print(round(data[[\"density\",\"quality\",]].corr(),2))"
    ]
   },
